packages/jsii/test/negatives/neg.class-name.ts
///!MATCH_ERROR: Type names must use PascalCase: myclass

export class myclass {

}
